<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <me.himanshusoni.chatmessageview.ui.MButton
                android:id="@+id/btn_analyze"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="50"
                android:background="@drawable/btnshadow"
                android:gravity="center"
                android:text="@string/birthday_analyze"
                android:textColor="@color/Black"
                android:textSize="@dimen/default_font" />

            <me.himanshusoni.chatmessageview.ui.MButton
                android:id="@+id/btn_set_alarm"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="50"
                android:background="@drawable/btnshadow"
                android:gravity="center"
                android:text="@string/birthday_set_alarm"
                android:textColor="@color/Black"
                android:textSize="@dimen/default_font" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <me.himanshusoni.chatmessageview.ui.MButton
                android:id="@+id/btn_gif"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="50"
                android:background="@drawable/btnshadow"
                android:gravity="center"
                android:text="@string/birthday_gif"
                android:textColor="@color/Black"
                android:textSize="@dimen/default_font" />

            <me.himanshusoni.chatmessageview.ui.MButton
                android:id="@+id/btn_sms"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="50"
                android:background="@drawable/btnshadow"
                android:gravity="center"
                android:text="@string/birthday_sms"
                android:textColor="@color/Black"
                android:textSize="@dimen/default_font" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>