<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            app:srcCompat="@drawable/ic_intro_page1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <me.himanshusoni.chatmessageview.ui.MTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/slide_title" />

            <me.himanshusoni.chatmessageview.ui.MTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/login_hint"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/default_font" />

            <LinearLayout
                android:id="@+id/ll_select_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/bg_gray_right_corner"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/arrow_drop" />

                <me.himanshusoni.chatmessageview.ui.MTextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="100"
                    android:gravity="center"
                    android:text="@string/select_country"
                    android:textColor="@color/colorBlack" />

                <me.himanshusoni.chatmessageview.ui.MTextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <me.himanshusoni.chatmessageview.ui.MEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/bg_gray_right_corner"
                android:gravity="center"
                android:hint="@string/PhoneMobile"
                android:inputType="number"
                android:paddingRight="@dimen/_30sdp"
                android:singleLine="true"
                android:textColor="@color/colorBlack" />

            <me.himanshusoni.chatmessageview.ui.MButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/bg_btn_right_corner"
                android:gravity="center"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


    </LinearLayout>

    <include
        android:id="@+id/pv_loading"
        layout="@layout/view_loading"
        android:visibility="gone" />

</RelativeLayout>